<resources>
    <string name="app_name">weekPort</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intoApp">立即进入</string>
    <string name="action_title">周报</string>
    <string name="personInfo">个人信息</string>
    <string name="projectInfo">项目导入</string>
    <string name="requirement">需求导入</string>
    <string name="title_activity_content"> </string>
    <string name="plus">添加</string>
    <string name="menu">菜单</string>
    <string name="person_title">个人信息</string>
    <string name="userName">姓名</string>
    <string name="IDNum">身份证号码</string>
    <string name="filePath">周报文件位置</string>
    <string name="myWeekPort">我的周报</string>
    <string name="calendar">日期</string>
    <string name="importProjectFile">导入项目数据</string>
    <string name="projectName">项目名称</string>
    <string name="requirementNo">需求编号</string>
    <string name="taskContent">任务</string>
    <string name="overtime">加时</string>
    <string name="trafficFee">交通费</string>
    <string name="mealFee">餐费</string>
    <string name="otherFee">其他费用</string>
    <string name="portType">类型</string>
    <string name="selPortType">选择类型</string>
    <string name="outFlag">是否出差</string>
    <string name="taskType">任务类型</string>
    <string name="finish">完成</string>
    <string name="selDate">选择日期</string>
    <string name="addTask">添加</string>
    <string name="loadingText">APP初始化...</string>
    <string name="save">保存</string>
    <string name="tip_title">提示</string>
    <string name="nodata">空</string>
    <string name="title_activity_project_list">选择参与项目</string>
    <string name="searchTitle">搜索</string>
    <string name="loadMore">数据加载中，请稍后</string>
    <string name="personPlus">添加</string>
    <string name="importRequirementFile">导入需求数据</string>
</resources>
